# pogona-old-archive

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  LICENSE  meson.build  meson_options.txt
.github/workflows/: build.yml
example/: main.c  meson.build  shader.frag.glsl  shader.vert.glsl
include/pogona/: logger.h  pogona.h  renderer.h  types.h  vector.h  window.h
include/pogona/Renderer/: Renderer.h  VulkanRendererApi.h
include/pogona/Renderer/Vulkan/: device.h  instance.h  physicalDevice.h
include/pogona/Window/: WaylandWindowApi.h  Window.h
include/pogona/math/: linear.h
include/pogona/renderer/: renderer.h  vulkan_renderer_api.h
include/pogona/renderer/vulkan/: device.h  instance.h  physical_device.h
include/pogona/window/: wayland_window_api.h  window.h
pch/: pch.h
src/: logger.c  meson.build  pogona.c  vector.c
src/Renderer/: Renderer.c  VulkanRendererApi.c
src/Renderer/Vulkan/: device.c  instance.c  physicalDevice.c
src/Window/: WaylandWindowApi.c  Window.c
src/math/: linear.c
src/renderer/: meson.build  renderer.c  vulkan_renderer_api.c  vulkan_renderer_api.h
src/renderer/vulkan/: device.c  device.h  instance.c  instance.h  physical_device.c  physical_device.h  vulkan.h  vulkan_core.c  vulkan_core.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_render.h  vulkan_render_pass.c  vulkan_render_pass.h  vulkan_shader.c  vulkan_shader.h  vulkan_surface.c  vulkan_surface.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_synchronization.c  vulkan_synchronization.h
src/window/: meson.build  wayland_window_api.c  wayland_window_api.h  window.c
tests/: mathLinear.c  meson.build  randomVector.c  simpleVector.c  testVector.c
