test_simple_vector = executable('testSimpleVector', 'simpleVector.c', link_with: lib_pogona, include_directories: [include_directories('../include')])
test('vector simple test', test_simple_vector)

test_random_vector = executable('testRandomVector', 'randomVector.c', link_with: lib_pogona, include_directories: [include_directories('../include')])
test('vector random test', test_random_vector)
